--- a/index.html
+++ b/index.html
@@ -26,6 +26,33 @@
             text-align: left;
         }
 
+        .keystroke {
+            border: 1px solid #0000002b;
+            background-color: #00000014;
+            padding: 3px;
+            font-size: 14px;
+            font-weight: 400;
+            border-radius: 4px;
+        }
+
+        .suggested {
+            display: flex;
+            align-items: center;
+            justify-content: left;
+            margin-top: 5px;
+        }
+
+        .suggestedPlus {
+            color: green;
+            font-size: 18px;
+            margin-right: 10px;
+        }
+
+        .suggestedCode {            
+            font-size: 18px;
+            margin-right: 10px;
+        }
+
         .input-container {
             display: flex;
             flex-direction: column;
@@ -46,77 +73,18 @@
     <div class="container">
         <h1>Shortcut Explorer</h1>
         <div class="row">
-            <div id="codesView" class="box"></div>
+            <div id="viewId" class="box"></div>
             <div class="box">
                 <div class="input-container">
-                    <label for="codeInput">Type a key codes to form a shortcut:</label>
-                    <input type="text" id="codeInput">
+                    <label for="inputId">Type a key codes to form a shortcut:</label>
+                    <input type="text" id="inputId">
                 </div>
             </div>
-            <div id="codeSuggestions" class="box"></div>
+            <div id="suggestId" class="box"></div>
         </div>
     </div>
 
-    <script>
-        let codes;
-
-        const codesView = document.getElementById("codesView");
-        const codeInput = document.getElementById("codeInput");
-        const codeSuggestions = document.getElementById("codeSuggestions");
-
-        codeInput.addEventListener("input", function () {
-            const inputText = codeInput.value.toLowerCase();
-            const filteredCodes = codes.filter(code => 
-                code["aliases"].filter(alias => alias.startsWith(inputText)).length > 0
-            );
-            displaySuggestions(filteredCodes);
-        });
-
-        function displaySuggestions(codes) {
-            codeSuggestions.innerHTML = "";
-
-            codes.forEach(code => {
-                const suggestion = document.createElement("div");
-                suggestion.textContent = "+ " + code["view"];
-                codeSuggestions.appendChild(suggestion);
-
-                suggestion.addEventListener("click", function () {
-                    codeInput.value = "";
-                    codeSuggestions.innerHTML = "";
-
-                    const codeDiv = document.createElement("div");
-                    codesView.appendChild(codeDiv);
-                    codeDiv.textContent = code["view"];
-                });
-            });
-        }
-
-        document.addEventListener("click", function (event) {
-            if (event.target !== codeInput && event.target !== codeSuggestions) {
-                codeSuggestions.innerHTML = "";
-            }
-        });
-
-        document.addEventListener("keydown", function (event) {            
-            const keyPressed = event.key;
-            console.log("Key pressed: " + keyPressed);
-        });
-
-        fetch('https://kishmakov.github.io/shortcut-explorer/codes.json')
-            .then(response => {
-                if (response.ok) {
-                    return response.json()
-                        .then(data => {
-                            codes = data["codes"];
-                        });
-                } else {
-                    throw new Error('Failed to fetch JSON data');
-                }
-            })
-            .catch(error => {
-                console.error(error);
-            });
-    </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
