--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <div class="container">
         <h1>Shortcut Explorer</h1>
         <div class="row">
-            <div id="viewId" class="box"></div>
+            <div class="box">
+                <div class="row" id="viewId"></div>
+            </div>
             <div class="box">
                 <div class="input-container">
                     <label for="inputId">Press a key or type its code, then click to add it to the shortcut:</label>
