Support first shortcut

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head>    
+<head>
     <title>Shortcut Explorer</title>
 </head>
 
@@ -19,6 +19,11 @@
                 </div>
             </div>
             <div id="suggestId" class="box"></div>
+        </div>
+        <div class="row">
+            <div id="osId" class="box"></div>
+            <div id="ideId" class="box"></div>
+            <div id="browserId" class="box"></div>
         </div>
     </div>
 
