--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             </div>
             <div id="suggestId" class="box"></div>
         </div>
+        <div id="separatorId" class="container line-container hidden">
+            <div class="horizontal-line"></div>
+        </div>
         <div class="row">
             <div id="osId" class="box"></div>
             <div id="ideId" class="box"></div>
