--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         </div>
         <div id="separatorId" class="container line-container hidden">
             <div class="horizontal-line"></div>
+            <div class="input-container">
+                <p>
+                    Feel free <a href="https://github.com/kishmakov/shortcut-explorer/edit/master/shortcuts.json">to add</a>
+                    a known shortcut. Here what is known so far:
+                </p>
+            </div>
         </div>
         <div class="row">
             <div id="osId" class="box"></div>
