Improve invitation text

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <div class="horizontal-line"></div>
             <div class="input-container">
                 <p>
-                    Feel free <a href="https://github.com/kishmakov/shortcut-explorer/edit/master/shortcuts.json">to add</a>
-                    a known shortcut. Here what is known so far:
+                    Feel free <a href="https://github.com/kishmakov/shortcut-explorer/edit/master/shortcuts.json">to add
+                    a known or clarify an existing</a> shortcut. Here what is known so far:
                 </p>
             </div>
         </div>
