--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="input-container">
                 <p>
                     Feel free <a href="https://github.com/kishmakov/shortcut-explorer/edit/master/shortcuts.json">to add
-                    a known or clarify an existing</a> shortcut. Here what is known so far:
+                    known or clarify existing</a> shortcut. Here what is known so far:
                 </p>
             </div>
         </div>
